argocd/external/homeassistant.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: external
  name: hassio-external-service
spec:
  ports:
  - name: hassio-external-app
    port: 80
    protocol: TCP
    targetPort: 8123
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: external
  name: hassio-external-service
subsets:
- addresses:
  - ip: 10.0.3.5
  ports:
  - name: hassio-external-app
    port: 8123
    protocol: TCP
