argocd/external/plex-bazarr.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: external
  name: bazarr-external-service
spec:
  ports:
  - name: bazarr-external-app
    port: 80
    protocol: TCP
    targetPort: 6767
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: external
  name: bazarr-external-service
subsets:
- addresses:
  - ip: 10.1.200.5
  ports:
  - name: bazarr-external-app
    port: 6767
    protocol: TCP
