argocd/external/plex-radarr.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: external
  name: radarr-external-service
spec:
  ports:
  - name: radarr-external-app
    port: 80
    protocol: TCP
    targetPort: 7878
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: external
  name: radarr-external-service
subsets:
- addresses:
  - ip: 10.1.200.5
  ports:
  - name: radarr-external-app
    port: 7878
    protocol: TCP
