argocd/external/plex-sonarr.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: external
  name: sonarr-external-service
spec:
  ports:
  - name: sonarr-external-app
    port: 80
    protocol: TCP
    targetPort: 8989
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: external
  name: sonarr-external-service
subsets:
- addresses:
  - ip: 10.1.200.5
  ports:
  - name: sonarr-external-app
    port: 8989
    protocol: TCP
