argocd/external/plex-stats.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: external
  name: stats-external-service
spec:
  ports:
  - name: stats-external-app
    port: 80
    protocol: TCP
    targetPort: 8181
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: external
  name: stats-external-service
subsets:
- addresses:
  - ip: 10.0.3.23
  ports:
  - name: stats-external-app
    port: 8181
    protocol: TCP
