argocd/external/plex.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: external
  name: plex-external-service
spec:
  ports:
  - name: plex-external-app
    port: 80
    protocol: TCP
    targetPort: 32400
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: external
  name: plex-external-service
subsets:
- addresses:
  - ip: 10.0.3.23
  ports:
  - name: plex-external-app
    port: 32400
    protocol: TCP
