argocd/external/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: external
  name: external-ingress
  annotations:
    # custom max body size for file uploading like backing image uploading
    # nginx.ingress.kubernetes.io/proxy-body-size: 10000m
    nignx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - docs.alex-j-butler.com
    secretName: docs-external-tls
  rules:
  - host: docs.alex-j-butler.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: docs-external-endpoint
            port:
              number: 80
