argocd/external/unifi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: external
  name: unifi-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: internal-nginx
  tls:
  - hosts:
    - unifi.int.alex-j-butler.com
    secretName: unifi-int-tls
  rules:
  - host: unifi.int.alex-j-butler.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: unifi-external-service
            port:
              number: 8443
